public/stylesheets/htwplus.css
/*============================== General ==============================*/

html {
    overflow-x: hidden;
    max-width: 100%;
}

body {
	margin-top: 80px;
	overflow-x: hidden;
}

div.alert {
	margin-left: -10px;
    margin-right: -10px;
}

a {
	outline: none!important;
}

hr {
	border-bottom: 1px solid #ffffff
}

table {
	table-layout: fixed;
	margin-bottom: 0;
}

td {
	overflow: hidden;
	text-overflow: ellipsis;
}

textarea {
  	resize: none;
}

button > .glyphicon,
a > .glyphicon {
	color: rgb(90,88,88);
}

button > .glyphicon:hover,
a > .glyphicon:hover {
	color: #76B900;
}

.hp-truncate {
	overflow: hidden;
	text-overflow: ellipsis;
}

.hp-white-space {
	white-space: pre-line;
}

h1 {
	text-align: center;
}

#hp-feedback {
	width: 50px;
	height: 172px;
	padding: 5px;
	position: fixed;
	left: -5px;
	top: 50%;
	margin-top: -105px;
	z-index: 1500;
}

#hp-feedback-icon {
	color: white !important;
	margin: 10px;
	font-size: 14pt;
}

.hp-easy-feedback {
	-moz-transform: rotate(90deg);
	-ms-transform: rotate(90deg);
	-o-transform: rotate(90deg);
	-webkit-transform: rotate(90deg);
	
	transform: rotate(90deg);
	font-size: 24px;
}

#hp-feedback-content {
	height: 100px;
}

.hp-green {
	/* color: #76B900; */
	font-weight: bold;
}

.hp-bold {
    font-weight: bold;
}

.no-drop {
	cursor: no-drop;
}

.hp-focus-search {
	cursor: pointer;	
}

/*============================== Landingpage ==============================*/
body#hp-landingpage {
	margin-top: 0 !important;
}

#hp-landingpage div.alert {
	position: absolute;
	margin: 0;
	margin-top: 15px !important;
	left: 10px;
	right: 10px;
	text-shadow: none;
}

@media (min-width: 992px) {
    #hp-landingpage div.alert {
    	margin-top: 25px !important;
    }
}

#hp-description {
    text-align: center;
    padding-top: 30px;
    font-family: 'Swanky and Moo Moo', cursive;
    font-size: 20pt;
	-moz-transform: rotate(350deg);
	-ms-transform: rotate(350deg);
	-o-transform: rotate(350deg);
    -webkit-transform: rotate(350deg);
    transform: rotate(350deg);
}

#hp-landingpage div#hp-login {
	padding: 70px 0;
    background-size: 100% auto;
    background: url('../images/130719___Philipp_Meuser_0011_01_1200px_crop.jpg') no-repeat center center;
    color: white !important;
	text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.8);
}

#hp-landingpage div#hp-login .hp-logo img {
	margin: 0;
	padding: 0 50px;
}

@media (min-width: 992px) {
    #hp-landingpage div#hp-login {
       	padding: 150px 0;
    }
    #hp-landingpage div#hp-login .hp-logo {
       	margin-top: 30px;
    }
    #hp-landingpage div#hp-login .hp-logo img {
        padding: 0;
    }
}

#hp-landingpage div#hp-login input {
    background-color: rgba(255, 255, 255, 0.9);
}

#hp-landingpage div#hp-login > div {
    background-color: rgba(0, 0, 0, 0.5);
    padding-top: 15px;
    padding-bottom: 15px;
}

@media (max-width: 991px) {
    #hp-landingpage div#hp-login > div {
        margin: -70px 0;
        padding-top: 80px;
        padding-bottom: 80px;
    }
    #hp-landingpage div#hp-login #hp-login-right {
        margin-top: 30px;
    }
}

#hp-landingpage div#hp-navbar {
    border-width: 0 0 1px;
    border-radius: 0;
    z-index: 1030;
}

#hp-landingpage div#hp-navbar.hp-animate {
    transition: 0.3s ease 0s;
	-webkit-transition: 0.3s ease 0s;
	-moz-transition: 0.3s ease 0s;
	-ms-transition: 0.3s ease 0s;
	-o-transition: 0.3s ease 0s;
}

#hp-landingpage div#hp-navbar.affix-top {
    min-height: 15px;
    margin-bottom: -15px;
}

#hp-landingpage div#hp-navbar.affix-top > div.hp-navbar-container {
    display: none !important;
    visibility: hidden;
}

#hp-landingpage div#hp-navbar.affix {
	top: 0;
	left: 0;
	right: 0;
	min-height: 50px;
    margin-bottom: -51px;
}

#hp-landingpage div#hp-navbar.affix > div.hp-navbar-container {
    display: none;
    visibility: visible;
}

#hp-landingpage div#hp-navbar ul.hp-nav {
	float: none;
	margin-left: auto;
	margin-right: auto;
	display: table;
}

@media (min-width: 768px) {
    #hp-landingpage div#hp-navbar ul.hp-nav > li:not(:last-child) {
        margin-right: 30px;
    }
}

#hp-landingpage div#hp-about {
	margin-top: 51px;
	margin-bottom: 20px;
	padding-top: 15px;
}

#hp-landingpage div#hp-about > div {
    position: relative;
    border: 1px solid #ddd;
    border-radius: 5px;
    padding: 0;
}

#hp-landingpage div#hp-about > div > * {
    padding: 0 30px;
}

#hp-landingpage div#hp-about > div:last-child {
    padding-bottom: 15px;
}

#hp-landingpage div#hp-about .hp-circle {
    width: 110px;
    margin-top: 30px;
    position: relative;
    background-color: white;
    margin-left: auto;
    margin-right: auto;
    border-radius: 50%;
    border: 1px solid #ddd;
    padding: 5px;
}

#hp-landingpage div#hp-about .hp-circle > img {
     border-radius: 50%;
}

#hp-landingpage div#hp-about > div:after {
    content: '';
    display: block;
    position: absolute;
    width: 100%;
    height: 90px;
    top: 0;
    background: #f9f9f9;
    border-bottom: 1px solid #ddd;
    border-radius: 5px 5px 0 0;
    z-index: -1;
}

#hp-landingpage div#hp-feature-text {
    margin-top: 30px;
}

div[id*='hp-feature-text-'] table {
    width: 100%;
    margin-top: 80px;
}
/* ... */

